--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
                     <div class="dropdown-menu border-0 m-0">
                         <a href="./upvc-doors-windows.html" class="dropdown-item">UPVC Doors and Windows</a>
-                        <a href="./alluminium-doors-windows.html" class="dropdown-item">Alluminium Doors and Windows</a>
+                        <a href="./aluminium-doors-windows.html" class="dropdown-item">Aluminium Doors and Windows</a>
                         <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal
                             Partitions</a>
                         <a href="./facades.html" class="dropdown-item">Facades</a>
@@ -147,14 +147,15 @@
                     <h1 class="display-5 mb-4">A Creative Architecture Agency For Your Dream Home</h1>
                     <p>ALECO By Eco doors and windows manufactures Aluminium/Upvc doors and windows, internal
                         partitions, wardrobe shutters. We are serving in industry from last one decade.</p>
-                    <p class="mb-4">Registered in 2016, ECO Doors & Windows has made a name for itself in the list of
+                    <p class="mb-4">Registered in 2014, ECO Doors & Windows has made a name for itself in the list of
                         top suppliers of in India and is one of the leading sellers of listed products. ECO Doors &
                         Windows is listed in Trade India's list of verified sellers offering supreme quality of etc.</p>
                     <div class="d-flex align-items-center mb-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center border border-5 border-primary"
                             style="width: 120px; height: 120px;">
                             <h1 class="display-1 mb-n2" data-toggle="counter-up">10</h1>
-                        </div>
+                        <span style="font-size: 38px;font-weight: 900;color: #218d43;"> +</span>
+                    </div>
                         <div class="ps-4">
                             <h3>Years</h3>
                             <h3>Serving</h3>
