--- a/railings-internal-partitions.html
+++ b/railings-internal-partitions.html
@@ -81,7 +81,7 @@
 
 
     <!-- Navbar Start -->
-    <nav style="gap: 10px;" class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn"
+    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn"
         data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
             <img class="me-3 logo-img" src="./img/icons/logo-aleco-doors-and-windows.png" width="350px" alt="Icon"> <img
@@ -101,7 +101,7 @@
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Products</a>
                     <div class="dropdown-menu border-0 m-0">
                         <a href="./upvc-doors-windows.html" class="dropdown-item">UPVC Doors and Windows</a>
-                        <a href="./alluminium-doors-windows.html" class="dropdown-item">Alluminium Doors and Windows</a>
+                        <a href="./aluminium-doors-windows.html" class="dropdown-item">Aluminium Doors and Windows</a>
                         <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal Partitions</a>
                         <a href="./facades.html" class="dropdown-item">Facades</a>
                         <!-- <a href="team.html" class="dropdown-item">Team Members</a>
