improving the about us

--- a/about.html
+++ b/about.html
@@ -148,8 +148,9 @@
                     <p>ALECO By Eco doors and windows manufactures Aluminium/Upvc doors and windows, internal
                         partitions, wardrobe shutters. We are serving in industry from last one decade.</p>
                     <p class="mb-4">Registered in 2014, ECO Doors & Windows has made a name for itself in the list of
-                        top suppliers of in India and is one of the leading sellers of listed products. ECO Doors &
-                        Windows is listed in Trade India's list of verified sellers offering supreme quality of etc.</p>
+                        top suppliers in India and is one of the leading sellers of windows and doors. Working with
+                        premier schools, architects, hotels and high profiled individuals, we have covered each category
+                        and well tailored requirements of clients from every category.</p>
                     <div class="d-flex align-items-center mb-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center border border-5 border-primary"
                             style="width: 120px; height: 120px;">
