--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                 class="me-3 logo-img-mob" src="./img/icons/logo-aleco-doors-and-windows-mob.png" width="100%"
                 alt="Icon">
         </a>
-        <button type="button" style="margin-left: 1.5rem;" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <button type="button" style="margin-left: 1.5rem;" class="navbar-toggler me-4" data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -101,7 +102,8 @@
                     <div class="dropdown-menu border-0 m-0">
                         <a href="./upvc-doors-windows.html" class="dropdown-item">UPVC Doors and Windows</a>
                         <a href="./aluminium-doors-windows.html" class="dropdown-item">Aluminium Doors and Windows</a>
-                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal Partitions</a>
+                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal
+                            Partitions</a>
                         <a href="./facades.html" class="dropdown-item">Facades</a>
                         <!-- <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
@@ -231,8 +233,9 @@
                     <p>ALECO By Eco doors and windows manufactures Aluminium/Upvc doors and windows, internal
                         partitions, wardrobe shutters. We are serving in industry from last one decade.</p>
                     <p class="mb-4">Registered in 2014, ECO Doors & Windows has made a name for itself in the list of
-                        top suppliers in India and is one of the leading sellers of windows and doors. ECO Doors &
-                        Windows is listed in Trade India's list of verified sellers offering supreme quality products.</p>
+                        top suppliers in India and is one of the leading sellers of windows and doors. Working with
+                        premier schools, architects, hotels and high profiled individuals, we have covered each category
+                        and well tailored requirements of clients from every category.</p>
                     <div class="d-flex align-items-center mb-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center border border-5 border-primary"
                             style="width: 120px; height: 120px;">
