adding images and minor fixes

--- a/facades.html
+++ b/facades.html
@@ -102,7 +102,8 @@
                     <div class="dropdown-menu border-0 m-0">
                         <a href="./upvc-doors-windows.html" class="dropdown-item">UPVC Doors and Windows</a>
                         <a href="./aluminium-doors-windows.html" class="dropdown-item">Aluminium Doors and Windows</a>
-                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal Partitions</a>
+                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal
+                            Partitions</a>
                         <a href="./facades.html" class="dropdown-item">Facades</a>
                         <!-- <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
@@ -122,12 +123,12 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-1 text-white animated slideInDown">UPVC Doors and Windows</h1>
+            <h1 class="display-1 text-white animated slideInDown">Facades</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="./index.html">Home</a></li>
                     <!-- <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li> -->
-                    <li class="breadcrumb-item text-primary active" aria-current="page">UPVC Doors and WIndows</li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page">Facades</li>
                 </ol>
             </nav>
         </div>
@@ -138,7 +139,7 @@
     <!-- Page Header Start -->
     <div class="container-xxl py-4 wow fadeInUp" data-wow-delay="0.1s">
         <div>
-            <img src="./img/upvc-doors-windows-aleco.png" width="
+            <img src="./img/facades-aleco.png" width="
                 100%" alt="upvc-doors-windows-aleco">
         </div>
     </div>
@@ -153,9 +154,9 @@
                         <div class="fact-icon">
                             <img src="img/icons/icon-2.png" alt="Icon">
                         </div>
-                        <h3 class="mb-3">Weather Resistance</h3>
-                        <p class="mb-0">Aleco's ongoing Development of Material Technology gives you long lasting
-                            quality of product.</p>
+                        <h3 class="mb-3">Aesthetics</h3>
+                        <p class="mb-0">Glass facades offer a sleek, modern look to buildings and enhance their visual
+                            appeal.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -163,9 +164,9 @@
                         <div class="fact-icon">
                             <img src="img/icons/icon-3.png" alt="Icon">
                         </div>
-                        <h3 class="mb-3">Maintainance Free</h3>
-                        <p class="mb-0">Aleco's windows and doors do not require regular re-painting and expensive
-                            maintainance.</p>
+                        <h3 class="mb-3">Transparency</h3>
+                        <p class="mb-0">Glass allows for maximum natural light transmission, creating bright, airy
+                            interiors and reducing the need for artificial lighting.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -173,9 +174,9 @@
                         <div class="fact-icon">
                             <img src="img/icons/icon-4.png" alt="Icon">
                         </div>
-                        <h3 class="mb-3">High Security</h3>
-                        <p class="mb-0">Our advance fittings, glazing and expert installation provides enhanced security
-                            for your family.</p>
+                        <h3 class="mb-3">Energy Efficiency</h3>
+                        <p class="mb-0">When combined with advanced glazing technology, glass facades can help reduce
+                            a building's energy consumption and costs.</p>
                     </div>
                 </div>
             </div>
@@ -188,88 +189,23 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" style="padding-bottom: 20px;" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt="Hotel-sadka-client-aleco"
-                            title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt="Mount-litera-Zee-school-Amritsar"
-                            title="Mout Litera Zee School Amritsar">
+                        <img class="img-fluid" src="img/glass-facades-aleco-2.png" alt="Hotel-sadka-client-aleco"
+                            title="">
+                        <img class="img-fluid" src="img/glass-facades-aleco.png" alt="Mount-litera-Zee-school-Amritsar"
+                            title="">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">1. Casement UPVC Windows</h1>
-                    <p>Casement windows are the most popular type of frame frames. They are also known as crank windows.
-                        These windows have hinges on the side walls structuree frame that allow them to swing inwards
-                        and outwards. Depending on the style of the frame, casement windows may complement classic or
-                        modern décor.</p>
-                    <p class="mb-4">This UPVC window design is lockable and thus built for safety. However, they are not
-                        the ideal choice if you're looking at installing window air conditioning units. You may also be
-                        in trouble if you leave the windows open on a rainy day.
+                    <h1 class="display-5 mb-4">Glass Facades</h1>
+                    <p>Glass facades offer a sleek and modern aesthetic to buildings, enhancing their visual appeal.
+                        They also provide an abundance of natural light, which creates bright and airy interiors while
+                        reducing the need for artificial lighting.</p>
+                    <p class="mb-4">Glass facades, when combined with advanced glazing technology, can also help to
+                        improve a building's energy efficiency, reducing energy consumption and costs. In addition,
+                        glass is a durable material that is resistant to weathering, corrosion, and UV rays, making it a
+                        suitable choice for long-term use.
                     </p>
                     <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
-                </div>
-            </div>
-
-            <div class="row g-3">
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">2. Fixed UPVC Window Design</h1>
-                    <p>Fixed windows or picture windows are self-explanatory. These windows are permanently fixed and do
-                        not open or close. Since they are fixed, they may be any size of shape and require minimal
-                        hardware.</p>
-                    <p class="mb-4">Their function is mainly ornamental and to bring in natural light into the room
-                        while keeping dust, pollution and noise outside. Fixed UPVC windows with grills are often
-                        installed in staircases, bathrooms, attics and hallways. They are also installed in rooms that
-                        have alternative ventilation systems.
-                    </p>
-                    <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
-                </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt="Hotel-sadka-client-aleco"
-                            title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt="Mount-litera-Zee-school-Amritsar"
-                            title="Mout Litera Zee School Amritsar">
-                    </div>
-                </div>
-            </div>
-
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeIn" style="padding-bottom: 20px;" data-wow-delay="0.1s">
-                    <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt="Hotel-sadka-client-aleco"
-                            title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt="Mount-litera-Zee-school-Amritsar"
-                            title="Mout Litera Zee School Amritsar">
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">3. Tilt and Turn UPVC Windows</h1>
-                    <p>Tilt-and-Turn UPVC window design is extremely low-maintenance. These windows function by tilting
-                        inwards or away from the frame to optimise airflow.</p>
-                    <p class="mb-4">They are suitable for controlled ventilation in open, spacious areas of the house.
-                        You can also use them in tight spaces where ventilation needs to be controlled.
-                    </p>
-                    <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
-                </div>
-            </div>
-
-            <div class="row g-3">
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">4. Sliding UPVC Windows</h1>
-                    <p>Sliding UPVC window design is a great space savers for modern apartments. They can be fitted to
-                        slide horizontally or vertically and may be short or tall. What matters most is that the window
-                        frames follow parallel lio that they can slide easily.</p>
-                    <p class="mb-4">Sliding windows have movable panes or have one fixed and one sliding panel. You can
-                        even have multiple panels that slide against each other. Another alternative combination of
-                        glass and mesh is in the frames.
-                    </p>
-                    <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
-                </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt="Hotel-sadka-client-aleco"
-                            title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt="Mount-litera-Zee-school-Amritsar"
-                            title="Mout Litera Zee School Amritsar">
-                    </div>
                 </div>
             </div>
         </div>
@@ -277,17 +213,16 @@
 
     <div class="container-xxl py-5">
         <div class="container pt-5">
-            <h1 class="display-5 mb-4">Why are Aleco's uPVC Windows a better alternative to Steel Windows?</h1>
-            <p>Traditionally, the windows and door market was dominated by steel. There is no doubt that steel is a
-                great material. However, uPVC has emerged as a better and eco-friendly alternative to steel. Here is why
-                uPVC windows /UPVC doors are better than steel ones.</p>
-            <p class="mb-4"><b>Environment Friendly</b> - uPVC windows/UPVC doors use far less energy to get converted from raw
-                material to end product. On the other end, steel requires enormous energy to turn into an end-product.
-                This difference in energy consumption can run into tonnes.
-            </p>
-            <p class="mb-4">Apart from this, uPVC windows provide a <b>highly insulated environment</b> as plastic is a bad
-                conductor of heat. On the other hand, steel is a good conductor of heat and winters/summers can be harsh
-                with steel windows.
+            <h1 class="display-5 mb-4">What is special about Aleco's Premium Facades?</h1>
+            <p>
+                <b>Durability:</b> Glass is a durable material that is resistant to weathering, corrosion, and UV rays.
+                <br> <br>
+
+                <b>Flexibility:</b> Glass can be customized in terms of thickness, color, and texture, making it
+                adaptable to a wide range of design and functional requirements. <br> <br>
+
+                <b>Green Building:</b> Glass facades can contribute to the sustainability of buildings by reducing their
+                carbon footprint and improving indoor air quality. <br> <br>
             </p>
             <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
         </div>
