--- a/upvc-doors-windows.html
+++ b/upvc-doors-windows.html
@@ -188,9 +188,9 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" style="padding-bottom: 20px;" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt="Hotel-sadka-client-aleco"
+                        <img class="img-fluid" src="img/casement-upvc-windows-1.png" alt="Hotel-sadka-client-aleco"
                             title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt="Mount-litera-Zee-school-Amritsar"
+                        <img class="img-fluid" src="img/casement-upvc-windows-2.png" alt="Mount-litera-Zee-school-Amritsar"
                             title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
