--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             <h3 class="mb-3">UPVC Doors & Windows</h3>
                             <p class="mb-4">UPVC doors and windows are known for their energy-efficiency, providing
                                 improved insulation and reducing heat loss.</p>
-                            <a class="btn" href="./coming-soon.html">Read More</a>
+                            <a class="btn" href="./upvc-doors-windows.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -284,7 +284,7 @@
                             <p class="mb-4">The Max system refers to the company's high-end product range, which is
                                 designed to provide with the combination of security, and
                                 energy efficiency.</p>
-                            <a class="btn" href="./coming-soon.html">Read More</a>
+                            <a class="btn" href="./upvc-doors-windows.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -296,7 +296,7 @@
                             <h3 class="mb-3">Aluminium Doors & Windows</h3>
                             <p class="mb-4">Aluminium doors and windows can be manufactured with high-performance double
                                 glazing and weather stripping, improving their energy efficiency.</p>
-                            <a class="btn" href="./coming-soon.html">Read More</a>
+                            <a class="btn" href="./aluminium-doors-windows.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -308,7 +308,7 @@
                             <h3 class="mb-3">Railings and Internal Partitions</h3>
                             <p class="mb-4">We use high-quality and durable materials, such as stainless steel, glass,
                                 and wood, to manufacture the railings and partitions.</p>
-                            <a class="btn" href="./coming-soon.html">Read More</a>
+                            <a class="btn" href="./railings-internal-partitions.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -320,7 +320,7 @@
                             <h3 class="mb-3">Facades</h3>
                             <p class="mb-4">Facades play a critical role in defining the overall appearance
                                 of a building and can impact its aesthetic, energy efficiency, and durability.</p>
-                            <a class="btn" href="./coming-soon.html">Read More</a>
+                            <a class="btn" href="./facades.html">Read More</a>
                         </div>
                     </div>
                 </div>
