adding railings content

--- a/railings-internal-partitions.html
+++ b/railings-internal-partitions.html
@@ -102,7 +102,8 @@
                     <div class="dropdown-menu border-0 m-0">
                         <a href="./upvc-doors-windows.html" class="dropdown-item">UPVC Doors and Windows</a>
                         <a href="./aluminium-doors-windows.html" class="dropdown-item">Aluminium Doors and Windows</a>
-                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal Partitions</a>
+                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal
+                            Partitions</a>
                         <a href="./facades.html" class="dropdown-item">Facades</a>
                         <!-- <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
@@ -127,7 +128,8 @@
                 <ol class="breadcrumb text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="./index.html">Home</a></li>
                     <!-- <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li> -->
-                    <li class="breadcrumb-item text-primary active" aria-current="page">Railings and Internal Partitions</li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page">Railings and Internal Partitions
+                    </li>
                 </ol>
             </nav>
         </div>
@@ -195,14 +197,15 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">1. Casement UPVC Windows</h1>
-                    <p>Casement windows are the most popular type of frame frames. They are also known as crank windows.
-                        These windows have hinges on the side walls structuree frame that allow them to swing inwards
-                        and outwards. Depending on the style of the frame, casement windows may complement classic or
-                        modern décor.</p>
-                    <p class="mb-4">This UPVC window design is lockable and thus built for safety. However, they are not
-                        the ideal choice if you're looking at installing window air conditioning units. You may also be
-                        in trouble if you leave the windows open on a rainy day.
+                    <h1 class="display-5 mb-4">1. Frameless Door</h1>
+                    <p>Introducing the ultimate in modern elegance - our frameless glass door railing system. Experience
+                        the beauty of unobstructed views and an open concept feel, perfect for any contemporary home or
+                        office design. Made with durable materials and expert craftsmanship, our frameless glass door
+                        railing not only adds style, but also provides a safe and secure barrier.</p>
+                    <p class="mb-4">Whether you're looking to create a stunning entrance to your living space or to
+                        enhance the look of your outdoor patio, our frameless glass door railing is the perfect
+                        solution. With a wide range of customization options, you can create a look that truly reflects
+                        your personal taste and style. Upgrade your space with our frameless glass door railing today!
                     </p>
                     <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
                 </div>
@@ -210,14 +213,15 @@
 
             <div class="row g-3">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">2. Fixed UPVC Window Design</h1>
-                    <p>Fixed windows or picture windows are self-explanatory. These windows are permanently fixed and do
-                        not open or close. Since they are fixed, they may be any size of shape and require minimal
-                        hardware.</p>
-                    <p class="mb-4">Their function is mainly ornamental and to bring in natural light into the room
-                        while keeping dust, pollution and noise outside. Fixed UPVC windows with grills are often
-                        installed in staircases, bathrooms, attics and hallways. They are also installed in rooms that
-                        have alternative ventilation systems.
+                    <h1 class="display-5 mb-4">2. Aluminium Glass Railing</h1>
+                    <p>Looking for a sleek, modern, and durable railing solution for your home or office space? Look no
+                        further than our aluminium glass railing system. Made with high-quality aluminium and tempered
+                        glass, our railing not only adds a touch of sophistication to your space, but also provides a
+                        secure barrier that is built to last. </p>
+                    <p class="mb-4">With its clean lines and minimalist design, our aluminium glass railing is the
+                        perfect choice for those seeking a contemporary aesthetic. Whether you're looking to add a touch
+                        of style to your balcony or to create an open-concept feel in your living space, our aluminium
+                        glass railing has you covered.
                     </p>
                     <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
                 </div>
@@ -241,35 +245,19 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">3. Tilt and Turn UPVC Windows</h1>
-                    <p>Tilt-and-Turn UPVC window design is extremely low-maintenance. These windows function by tilting
-                        inwards or away from the frame to optimise airflow.</p>
-                    <p class="mb-4">They are suitable for controlled ventilation in open, spacious areas of the house.
-                        You can also use them in tight spaces where ventilation needs to be controlled.
+                    <h1 class="display-5 mb-4">3. SS Glass Railing</h1>
+                    <p>Upgrade your space with the ultimate in style and durability - our stainless steel glass railing
+                        system. Perfect for both residential and commercial applications, our railing provides a sleek
+                        and modern look while ensuring safety and security. The combination of high-quality stainless
+                        steel and tempered glass creates a barrier that is both visually stunning and built to last.
+                        With its clean lines and minimalist design, our stainless steel glass railing adds a touch of
+                        sophistication to any space.</p>
+                    <p class="mb-4">Whether you're looking to enhance the look of your staircase, deck, or balcony, our
+                        railing is the perfect solution. With easy installation and a range of customization options,
+                        you can create a look that truly reflects your personal taste and style. Make your space shine
+                        with our stainless steel glass railing.
                     </p>
                     <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
-                </div>
-            </div>
-
-            <div class="row g-3">
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">4. Sliding UPVC Windows</h1>
-                    <p>Sliding UPVC window design is a great space savers for modern apartments. They can be fitted to
-                        slide horizontally or vertically and may be short or tall. What matters most is that the window
-                        frames follow parallel lio that they can slide easily.</p>
-                    <p class="mb-4">Sliding windows have movable panes or have one fixed and one sliding panel. You can
-                        even have multiple panels that slide against each other. Another alternative combination of
-                        glass and mesh is in the frames.
-                    </p>
-                    <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
-                </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.png" alt="Hotel-sadka-client-aleco"
-                            title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-2.png" alt="Mount-litera-Zee-school-Amritsar"
-                            title="Mout Litera Zee School Amritsar">
-                    </div>
                 </div>
             </div>
         </div>
@@ -277,18 +265,18 @@
 
     <div class="container-xxl py-5">
         <div class="container pt-5">
-            <h1 class="display-5 mb-4">Why are Aleco's uPVC Windows a better alternative to Steel Windows?</h1>
-            <p>Traditionally, the windows and door market was dominated by steel. There is no doubt that steel is a
-                great material. However, uPVC has emerged as a better and eco-friendly alternative to steel. Here is why
-                uPVC windows /UPVC doors are better than steel ones.</p>
-            <p class="mb-4"><b>Environment Friendly</b> - uPVC windows/UPVC doors use far less energy to get converted from raw
-                material to end product. On the other end, steel requires enormous energy to turn into an end-product.
-                This difference in energy consumption can run into tonnes.
-            </p>
-            <p class="mb-4">Apart from this, uPVC windows provide a <b>highly insulated environment</b> as plastic is a bad
-                conductor of heat. On the other hand, steel is a good conductor of heat and winters/summers can be harsh
-                with steel windows.
-            </p>
+            <h1 class="display-5 mb-4">Why Aleco's Railing and Internal partitions is most popular among people?</h1>
+            <p>Our railings and internal partitions are the best in the market due to a number of factors. Firstly, we
+                use high-quality materials that are durable, strong and long-lasting, ensuring that our products are
+                built to last.</p>
+            <p class="mb-4">Secondly, we have a team of experienced and skilled craftsmen who take great care in the
+                design and manufacture of each product, ensuring that they meet the highest standards of quality and
+                safety.</p>
+            <p>Thirdly, we have a commitment to innovation, constantly improving our products to meet the
+                changing needs of our customers. Additionally, we offer a wide range of styles and designs to choose
+                from, ensuring that our customers can find the perfect railing or partition to suit their individual
+                tastes and needs. With these factors combined, it's no wonder that our railings and internal partitions
+                are the best in the market.</p>
             <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
         </div>
     </div>
